--- a/package/inject_generator/pubspec.yaml
+++ b/package/inject_generator/pubspec.yaml
@@ -7,23 +7,23 @@ authors:
 homepage: https://pub.dartlang.org/packages/inject
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  analyzer: ^0.38.5
-  build: ^1.2.2
-  code_builder: ^3.0.3
-  collection: ^1.14.7
-  dart_style: ^1.0.10
-  logging: ^0.11.3+1
-  meta: ^1.1.2
+  analyzer: ^1.4.0
+  build: ^2.0.1
+  code_builder: ^4.0.0
+  collection: ^1.15.0-nullsafety.1
+  dart_style: ^2.0.0
+  logging: ^1.0.1
+  meta: ^1.3.0
   path: ^1.5.1
-  quiver: ^2.0.0
-  stack_trace: ^1.9.2
+  quiver: ^3.0.1
+  stack_trace: ^1.10.0
 
 dev_dependencies:
-  build_runner: ^1.7.2
-  build_test: ^0.10.0
+  build_runner: ^2.0.1
+  build_test: ^2.1.0
   inject:
-  path: ../inject
-  test: ^1.5.0
+    path: ../inject
+  test: ^1.17.1
