--- a/package/inject_generator/pubspec.yaml
+++ b/package/inject_generator/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   collection: ^1.15.0-nullsafety.1
   dart_style: ^2.0.0
   logging: ^1.0.1
-  meta: ^1.3.0
+  meta: ^1.3.0-nullsafety.6
   path: ^1.5.1
   quiver: ^3.0.1
   stack_trace: ^1.10.0
